# codewars

./: .coverage  MSE.py  README.md  dna_to_rna.py  first_non_repeating.py  pyproject.toml
.github/workflows/: installation-action.yml
src/codewars/: hamming_distance.py  order_str.py  order_weight.py  sum_arrays.py  sum_multiple_3_5.py  tribonacci.py  zero_to_end.py
tests/: test_MSE.py  test_dna_to_rna.py  test_first_non_repeating.py  test_hamming_distance.py  test_oder_weights.py  test_order_str.py  test_sum_arrays.py  test_sum_multiple.py  test_tribonacci.py  test_zero_to_end.py
