[project]
name = "codewars"
version = "0.1.0"
description = ""
authors = [
    {name = "Garrigues",email = "gwenn.garrigues.etu@univ-lille.fr"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
    "coverage (>=7.10.7,<8.0.0)"
]

[tool.poetry]
packages = [{include = "codewars", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
